--- a/src/App.css
+++ b/src/App.css
@@ -1,42 +1,68 @@
-#root {
-  max-width: 1280px;
-  margin: 0 auto;
-  padding: 2rem;
+@import '@fortawesome/fontawesome-free/css/all.css';
+
+body {
+  font-family: 'Arial', sans-serif;
+  background-color: #f8f9fa; /* Fondo suave */
+  margin: 0;
+  padding: 0;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 100vh;
+}
+
+h1 {
   text-align: center;
+  color: #343a40; /* Texto oscuro */
+  margin-bottom: 20px;
 }
 
-.logo {
-  height: 6em;
-  padding: 1.5em;
-  will-change: filter;
-  transition: filter 300ms;
-}
-.logo:hover {
-  filter: drop-shadow(0 0 2em #646cffaa);
-}
-.logo.react:hover {
-  filter: drop-shadow(0 0 2em #61dafbaa);
+.container {
+  background-color: #ffffff; /* Fondo blanco */
+  padding: 20px;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+  border-radius: 8px;
+  width: 400px;
 }
 
-@keyframes logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+button {
+  background-color: #007bff; /* Color de fondo del botón */
+  color: #ffffff; /* Texto blanco */
+  border: none;
+  cursor: pointer;
+  font-size: 16px;
+  padding: 10px 15px; /* Espaciado interno */
+  border-radius: 4px;
+  transition: background-color 0.3s ease;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  a:nth-of-type(2) .logo {
-    animation: logo-spin infinite 20s linear;
-  }
+button:hover {
+  background-color: #0056b3; /* Color más oscuro al pasar el mouse */
 }
 
-.card {
-  padding: 2em;
+input[type="text"] {
+  width: calc(100% - 50px); /* Espaciado para el botón */
+  padding: 10px;
+  margin: 10px 0;
+  border: 1px solid #ccc;
+  border-radius: 4px;
 }
 
-.read-the-docs {
-  color: #888;
+ul {
+  list-style-type: none;
+  padding: 0;
 }
+
+.todo-item {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  margin: 8px 0;
+  padding: 10px;
+  background-color: #fafafa; 
+  border-radius: 4px;
+  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+}
+ p{
+  color: black;
+ }
